--- a/index.html
+++ b/index.html
@@ -45,17 +45,17 @@
 <div class="col-sm-4">
       <h2>Rounded Corners</h2>
       <p>The .rounded class adds rounded corners to an image:</p>            
-      <img src="/images/1.jpeg" class="rounded" alt="Cinque Terre" width="304" height="236"> 
+      <img src="images/1.jpeg" class="rounded" alt="Cinque Terre" width="304" height="236"> 
     </div>
   <div class="col-sm-4">
       <h2>Circle</h2>
       <p>The .rounded-circle class shapes the image to a circle:</p>            
-      <img src="/images/2.jpeg" class="rounded-circle" alt="Cinque Terre" width="304" height="236"> 
+      <img src="images/2.jpeg" class="rounded-circle" alt="Cinque Terre" width="304" height="236"> 
     </div>
     <div class="col-sm-4">
       <h2>Thumbnail</h2>
       <p>The .img-thumbnail class creates a thumbnail of the image:</p>            
-      <img src="/images/3.jpeg" class="img-thumbnail" alt="Cinque Terre" width="304" height="236"> 
+      <img src="images/3.jpeg" class="img-thumbnail" alt="Cinque Terre" width="304" height="236"> 
     </div>
 </body>
 </html>
